--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  # 이미지 경로 설정
+  assets:
+  - assets/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
